# ImageLibraryV2

./: .gitmodules  CMakeLists.txt  build.sh
include/Compressed/: Image.h  Pixel.h
include/Reload/: ConfigFile.h
include/Server/: Execute.h
src/: CMakeLists.txt
src/Compressed/: CMakeLists.txt  Image.cpp  Pixel.cpp  main.cpp
src/Core/: CMakeLists.txt  Core.cpp
src/Reload/: CMakeLists.txt  ConfigFile.cpp  main.cpp
src/Server/: CMakeLists.txt  Execute.cpp  main.cpp
